<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KaraokeDB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="detail">詳細</string>
    <string name="action_add">追加</string>
    <string name="input_song">曲名:</string>
    <string name="input_artist">歌手:</string>
    <string name="input_range">音域:</string>
    <string name="input_range2">～</string>
    <string name="input_diff">難度:</string>

</resources>
