<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ListView
            android:id="@+id/list"
            android:choiceMode="singleChoice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFE3E3E3"
            android:divider="#FFD5D5D5"
            android:dividerHeight="2dp"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:choiceMode="singleChoice"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/input_song"
                />
            <EditText
                android:id="@+id/addSong"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
            <TextView
                android:choiceMode="singleChoice"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/input_artist"
                />
            <EditText
                android:id="@+id/addArtist"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:choiceMode="singleChoice"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/input_range"
                />
            <EditText
                android:id="@+id/addLRange"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
            <TextView
                android:choiceMode="singleChoice"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/input_range2"
                />
            <EditText
                android:id="@+id/addHRange"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
            <TextView
                android:choiceMode="singleChoice"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/input_diff"
                />
            <EditText android:id="@+id/addDifficulty"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
            <Button android:id="@+id/data_submit"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/action_add"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>